# osdev

./: .bochsrc  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  a.out  create_img.sh  create_iso.sh  limine.cfg  linker.ld  make_iso.sh  run_qemu.cmd  run_qemu_wsl.sh
cmake/: x86_64-elf-toolchain.cmake
include/kernel/: common.h  isr.h  serial.h  stivale2.h  terminal.h  util.h
include/kernel/acpi/: init.h  tables.h
include/kernel/console/: console.h  ssfn.h
include/kernel/cpu/: cpu.h  idt.h
include/kernel/mm/: bootmem.h  memory.h  paging.h  phys_mem.h
include/libk/: int_types.h  printf.h  string.h
include/libk/util/: bitmap.h  linked.h
kernel/: acpi.c  common.c  isr.c  kmain.c  serial.c  terminal.c  util.c
kernel/console/: console.c  dina_fnt.c
kernel/cpu/: cpu.c  idt.c  idt_asm.asm  interrupt.asm
kernel/mm/: bootmem.c  phys_mem.c
libk/: string.c  vsprintf.c
limine/: Makefile  inc.S  limine-install.c
source/: fbcon.c  fbcon.h  kmain.c  log.c  log.h
source/acpi/: common.c  common.h  rsdt.c  rsdt.h
source/cpu/: gdt.c  gdt.h  gdt.s  idt.c  idt.h  interrupt.s  isr.c  isr.h
source/cpu/interrupts/: idt.c  idt.h  idt.s  (+3 more)
source/libk/: fmt.c  fmt.h  intrusive_list.h  kfont.h  kutil.c  kutil.h  lock.h  ter-i16b.sfn  ter-i16n.sfn  ter-i32b.sfn  ter-i32n.sfn
source/mm/: buddy.c  buddy.h  init.c  init.h  paging.h
src/: common.h  idt.c  idt.h  kernel.c  terminal.c  terminal.h
src/console/: console.c  dina_fnt.c
src/cpu/: cpu.c  cpu.h  idt.c  idt.h
src/kernel/: isr.c  isr.h
src/klib/: int_types.h  string.c  vsprintf.c
